fix: change the main content top margin to 60px on smaller screens
Added a media query to match the header media query so the margin top
of the main content is matching the header width on all screens

--- a/src/layouts/BasicLayout/BasicLayout.module.css
+++ b/src/layouts/BasicLayout/BasicLayout.module.css
@@ -1,3 +1,8 @@
 .MainContent {
     margin-top: 70px
 }
+@media (max-width: 810px) {
+    .MainContent {
+        margin-top: 60px;
+    }
+}
